--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
-	"name": "Cloud To Butt",
-	"version": "1.0",
-	"description": "Replaces the text 'the cloud' with 'my butt'.",
+	"name": "Metameater",
+	"version": "1.0.1",
+	"description": "Replaces the prefix 'meta' with 'meat'.",
 	"content_scripts": 
 	[
 		{
