Add icons to sync with package.

--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -3,6 +3,9 @@
 	"name": "Metameater",
 	"version": "1.0.2",
 	"description": "Replaces the prefix 'meta' with 'meat'.",
+	"developer": { "name": "Vague Rant" },
+	"icons": {  "48": "icon48.png",
+				"128": "icon128.png" },
 	"content_scripts": 
 	[
 		{
